@@ -5,6 +5,7 @@
 Makefile
 Makefile.in
 .libs
+*.gcda
 *.gcno
 *.la
 *.lcd
